--- a/learn-css/2_1_selector-basic.html
+++ b/learn-css/2_1_selector-basic.html
@@ -35,6 +35,11 @@
         color: darkslategray;
         background-color: yellow;
       }
+      /* 그룹 선택자 */
+      h1,
+      h2 {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
