learning font-style2

--- a/learn-css/3_1_font-style1.html
+++ b/learn-css/3_1_font-style1.html
@@ -6,6 +6,10 @@
     <title>Font Style 1</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
+      /* * {
+        margin: 0px;
+        padding: 0px;
+      } */
       html {
         /* font-family: serif, monospace; */
         font-family: 'Nanum Gothic', serif;
@@ -13,6 +17,7 @@
       }
       .title {
         font-size: 28px;
+        color: #30a35a22;
       }
       .introduce {
         font-size: 18px;
